# ordo

./: .gitignore  README.md  pyproject.toml
ordo/: check.py  main.py  plugin.py  uninstall.py
